openapi: bug fixing and enhancements
- openapi: unused path parameter produces an error fix #3483
- openapi: kotlin: support kotlin anonymous object as router fix #3484
- openapi: kotlin: support extension method on kooby subclass fix #3485